# gzarruk_site

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  CNAME  LICENSE.md  README.md  firestore.rules  import-to-firestore.js  index.html  manage.py  package-lock.json  package.json  pegasus-config.yaml  pyproject.toml  render.yaml
api-client/: runtime.ts
api-client/.openapi-generator/: FILES
api-client/apis/: CmsApi.ts  PegasusApi.ts  index.ts
api-client/models/: AggregateEmployeeData.ts  DepartmentEnum.ts  Employee.ts  PaginatedEmployeeList.ts  PatchedEmployee.ts
apps/ai/: agents.py
apps/ai/tools/: __init__.py  employees.py  weather.py
apps/chat/: urls.py  views.py
apps/content/management/commands/: bootstrap_content.py
apps/users/: mailing_list.py  views.py
apps/users/migrations/: 0002_customuser_language_customuser_timezone_and_more.py
assets/: nocturne.css  style.css
assets/styles/: site-tailwind.css
deploy/: build.sh  build_celery.sh
design_handoff_gzarruk_site/: Home.dc.html  Ironman Training.dc.html  README.md
gzarruk_site/: celery.py  settings.py  settings_production.py  urls.py  wsgi.py
im/: FIREBASE_SETUP.md  index.html
pegasus/apps/employees/: views.py
templates/account/: profile.html
templates/chat/: chat_home.html
templates/chat/components/: chat_message_response.html  input_bar.html
templates/web/: base.html
templates/web/components/: app_nav_menu_items.html
